--- a/src/app/_toolbar.scss
+++ b/src/app/_toolbar.scss
@@ -1,12 +1,12 @@
 #app-mount {
   .title-3qD0b-,
-  .container-1r6BKw {
+  .container-ZMc96U {
     background: var(--background);
   }
-  .children-19S4PO:after {
+  .children-3xh0VB:after {
     content: none;
   }
-  .searchBar-3dMhjb {
+  .searchBar-zdmu7v {
     background: var(--background-dark);
   }
 }
