--- a/src/app/_tooltips.scss
+++ b/src/app/_tooltips.scss
@@ -1,21 +1,21 @@
 #app-mount {
-  .tooltipGrey-1hnvTt {
+  .tooltipGrey-lpLZjh {
     background: var(--background-light);
   }
-  .tooltipPrimary-1d1ph4 {
+  .tooltipPrimary-3qLMbS {
     background: var(--background-light);
     box-shadow: var(--box-shadow);
   }
-  .tooltipPointer-3ZfirK {
+  .tooltipPointer-3L49xb {
     border-top-color: var(--background-light);
   }
-  .tooltipContent-bqVLWK {
+  .tooltipContent-Nejnvh {
     color: var(--text-focus);
     font-weight: var(--font-weight-bold);
-    .guildNameText-3Zwx4p {
+    .guildNameText-jBFbNC {
       color: var(--text-focus);
     }
-    .muteText-gutGxh {
+    .muteText-13RgwP {
       color: var(--text-normal);
     }
   }
