--- a/src/channels/_container.scss
+++ b/src/channels/_container.scss
@@ -1,6 +1,6 @@
 #app-mount {
-  .container-3w7J-x,
-  .sidebar-2K8pFh {
+  .container-1NXEtd,
+  .sidebar-1tnWFu {
     background: var(--background);
   }
 }
