--- a/src/channels/_panels.scss
+++ b/src/channels/_panels.scss
@@ -1,8 +1,8 @@
 #app-mount {
-  .panels-j1Uci_ {
+  .panels-3wFtMD {
     background: var(--background);
   }
-  .container-1giJp5 {
+  .container-1zzFcN {
     border: none;
   }
 }
