--- a/src/channels/_unreadbar.scss
+++ b/src/channels/_unreadbar.scss
@@ -1,4 +1,4 @@
-#app-mount .sidebar-2K8pFh .bar-30k2ka {
+#app-mount .sidebar-1tnWFu .bar-2eAyLE {
   border-radius: var(--border-radius);
   background: var(--background-light);
   box-shadow: var(--box-shadow);
