--- a/src/chat/_bars.scss
+++ b/src/chat/_bars.scss
@@ -1,12 +1,12 @@
 #app-mount {
-  .newMessagesBar-265mhP {
+  .newMessagesBar-1hF-9G {
     background: rgba(var(--accent), 1);
     border-radius: var(--border-radius);
     top: 10px;
     left: 26px;
     right: 26px;
   }
-  .jumpToPresentBar-G1R9s6 {
+  .jumpToPresentBar-1cEnH0 {
     background: var(--background-light);
     opacity: 1;
     border-radius: var(--border-radius);
@@ -17,22 +17,22 @@
     .barButtonMain-3K-jeJ {
       display: none;
     }
-    .barButtonBase-2uLO1z {
+    .barButtonBase-Sk2mdB {
       padding: 10px;
       height: auto;
       line-height: normal;
       color: var(--text-normal);
     }
-    .spinner-1AwyAQ {
+    .spinner-3xAPm0 {
       padding-left: 12px;
     }
   }
 
   // Reply to message
-  .attachedBars-tZDmyV {
+  .attachedBars-2BCP3l {
     background: var(--background);
   }
-  .replyBar-1YLQ2F {
+  .replyBar-1oi75v {
     background: var(--background-light);
   }
 }
