--- a/src/chat/_container.scss
+++ b/src/chat/_container.scss
@@ -1,14 +1,14 @@
 #app-mount {
-  .chat-3bRxxu {
+  .chat-2ZfjoI {
     background: var(--background);
-    .scrollerSpacer-avRLaA {
+    .scrollerSpacer-3AqkT9 {
       height: 25px;
     }
-    .content-yTz4x3:before {
+    .content-1jQy2l:before {
       content: none;
     }
   }
-  .operations-36ENbA > a {
+  .operations-3q3u6E > a {
     color: rgb(var(--accent), 1);
   }
 }
