--- a/src/chat/_form.scss
+++ b/src/chat/_form.scss
@@ -1,42 +1,42 @@
 #app-mount {
   // Chat box
-  .form-2fGMdU {
+  .form-3gdLxP {
     &:before {
       content: none;
     }
   }
-  .scrollableContainer-2NUZem {
+  .scrollableContainer-15eg7h {
     background: var(--background-alt);
     box-shadow: var(--box-shadow);
     border-radius: var(--border-radius);
 
   }
-  .placeholder-37qJjk {
+  .placeholder-1_mJY1 {
     text-transform: uppercase;
     font-weight: bold;
     letter-spacing: 1.5px;
     font-size: 12px;
   }
-  .placeholder-37qJjk,
-  .slateTextArea-1Mkdgw {
+  .placeholder-1_mJY1,
+  .slateTextArea-27tjG0 {
     padding: 15px 15px 15px 0;
   }
 
-  .attachButton-2WznTc {
+  .attachButton-_ACFSu {
     padding: 15px 16px;
     height: 52px;
   }
-  .buttons-3JBrkn {
+  .buttons-uaqb-5 {
     height: 52px;
   }
 
 	// Announcement bar thingy
-	.wrapper-39oAo3 {
+	.wrapper-2SplAX {
 		background: var(--background-light);
 	}
 
 	// No perms
-	.channelTextArea-rNsIhG {
+	.channelTextArea-1FufC0 {
 		background: var(--background-alt);
 	}
 }
