--- a/src/chat/_threads.scss
+++ b/src/chat/_threads.scss
@@ -2,10 +2,10 @@
 	.threadSidebar-1o3BTy {
 		background: var(--background);
 	}
-	.container-3hZ-gs {
+	.container-3i3IzO {
 		background: var(--background-dark);
 	}
-	.chat-15Vmww::before {
+	.chat-3JZdy8::before {
 		content: none;
 	}
 }
