--- a/src/guilds/_container.scss
+++ b/src/guilds/_container.scss
@@ -1,6 +1,6 @@
-#app-mount .guilds-1SWlCJ {
+#app-mount .guilds-2JjMmN {
   background: var(--background-dark);
-  .scrollerBase-289Jih {
+  .scrollerBase-_bVAAt {
     background: var(--background-dark);
     &::-webkit-scrollbar {
       display: none;
