--- a/src/inputs/_button.scss
+++ b/src/inputs/_button.scss
@@ -18,7 +18,7 @@
 
 
   // Panel buttons
-  .button-1YfofB.buttonColor-7qQbGO {
+  .button-1EGGcP.buttonColor-3bP3fX {
     background: var(--background-light);
     &:hover {
       background: rgba(var(--accent), 1);
