--- a/src/inputs/_input.scss
+++ b/src/inputs/_input.scss
@@ -1,4 +1,4 @@
-#app-mount .input-cIJ7To {
+#app-mount .input-2g-os5 {
   background: var(--background-dark);
   border: 1px solid var(--background-dark);
   border-radius: var(--border-radius);
