--- a/src/inputs/_select.scss
+++ b/src/inputs/_select.scss
@@ -21,7 +21,7 @@
   }
 
   // Dropdown
-  .popout-VcNcHB {
+  .popout-1KHNAq {
     background: var(--background-dark);
     border: none;
     border-radius: var(--border-radius);
@@ -31,14 +31,14 @@
       display: none;
     }
   }
-  .option-3KoAJB {
+  .option-2eIyOn {
     &:hover, &:focus, &.focused-1T6PE5 {
       background: var(--background-alt);
     }
     &[aria-selected="true"] {
       background: rgba(var(--accent), 1);
       color: #fff;
-      .selectedIcon-3uS11H {
+      .selectedIcon-19TbzU {
         color: #fff;
       }
     }
