--- a/src/members/_container.scss
+++ b/src/members/_container.scss
@@ -1,7 +1,7 @@
 #app-mount {
-  .container-2wlB3z,
-  .members-1998pB,
-  .members-1998pB > div {
+  .container-2o3qEW,
+  .members-3WRCEx,
+  .members-3WRCEx > div {
     background: transparent;
   }
 }
