--- a/src/members/_member.scss
+++ b/src/members/_member.scss
@@ -1,25 +1,18 @@
-#app-mount .member-3-YXUe {
-
-  .botTagRegular-2HEhHi {
+#app-mount .member-2gU6Ar {
+  .botTagRegular-kpctgU {
     background: rgba(var(--accent), 1);
   }
 
-
-
-
-
-
-
-  &:hover .layout-2DM8Md {
+  &:hover .layout-1qmrhw {
     background: var(--background-alt);
   }
-  &:active .layout-2DM8Md {
+  &:active .layout-1qmrhw {
     background: var(--background-light);
   }
-  &.selected-aXhQR6 .layout-2DM8Md {
+  &.selected-1-Z6gm .layout-1qmrhw {
     background: rgba(var(--accent), 1);
     .roleColor-rz2vM0,
-    .activity-2Gy-9S,
+    .activity-2EQDZv,
     .premiumIcon-1rDbWQ {
       color: #fff !important;
     }
@@ -28,7 +21,7 @@
     rect[fill="#f04747"] {
       fill: #fff;
     }
-    .botTagRegular-2HEhHi {
+    .botTagRegular-kpctgU {
       background: #fff;
       color: rgba(var(--accent), 1);
     }
