--- a/src/modals/_addjoinserver.scss
+++ b/src/modals/_addjoinserver.scss
@@ -1,12 +1,12 @@
 #app-mount {
-  .colorHeaderPrimary-26Jzh- {
+  .colorHeaderPrimary-jN_yGr {
     color: var(--text-focus);
   }
-  .colorHeaderSecondary-3Sp3Ft {
+  .colorHeaderSecondary-g5teka {
     color: var(--text-normal);
   }
 
-  .container-UC8Ug1 {
+  .container-x8Y1ix {
     border-radius: var(--border-radius);
     background: var(--background-alt);
     &:hover {
@@ -14,7 +14,7 @@
     }
   }
 
-  .backButton-iA7KIs {
+  .backButton-2Ps-B8 {
     color: var(--text-muted);
     &:hover {
       color: var(--text-normal);
