--- a/src/modals/_quickswitcher.scss
+++ b/src/modals/_quickswitcher.scss
@@ -1,11 +1,11 @@
 #app-mount {
-  .quickswitcher-3JagVE {
+  .quickswitcher-pKcM9U {
     background: var(--background);
   }
-  .scroller-zPkAnE {
+  .scroller-2qwVWY {
     background: transparent;
   }
-  .input-2VB9rf {
+  .input-3r5zZY {
     background: var(--background-light);
     box-shadow: var(--box-shadow);
     padding: 0 24px;
