--- a/src/modals/_uploadfile.scss
+++ b/src/modals/_uploadfile.scss
@@ -1,12 +1,12 @@
-#app-mount .uploadModal-2ifh8j {
+#app-mount .uploadModal-2ie9O_ {
 	background: var(--background);
 	border-radius: var(--border-radius);
 	box-shadow: var(--box-shadow);
-	.footer-3mqk7D {
+	.footer-VCsJQY {
 		background: var(--background-alt);
 		box-shadow: none;
 	}
-	.slateTextArea-1Mkdgw {
+	.slateTextArea-27tjG0 {
 		padding-left: 15px;
 	}
 }
