--- a/src/pages/_discovery.scss
+++ b/src/pages/_discovery.scss
@@ -3,15 +3,15 @@
     background: rgba(var(--accent), 1);
   }
 
-  .pageWrapper-1PgVDX {
+  .pageWrapper-2PwDoS {
     background: var(--background);
-    .input-cIJ7To {
+    .input-2g-os5 {
       background: #fff;
       border: none;
     }
   }
 
-  .card-3DjzTQ {
+  .card-2TuZPZ {
     border-radius: var(--border-radius);
     background: var(--background-alt);
     foreignObject[mask="url(#svg-mask-squircle)"] {
@@ -20,12 +20,12 @@
     &:hover {
       background: var(--background-light-alt);
       box-shadow: var(--box-shadow);
-      .iconMask-3b8GzQ {
+      .iconMask-2fMR98 {
         background: var(--background-light-alt);
       }
     }
   }
-  .iconMask-3b8GzQ {
+  .iconMask-2fMR98 {
     border-radius: var(--border-radius);
     background: var(--background-alt);  
   }
