--- a/src/pages/_friends.scss
+++ b/src/pages/_friends.scss
@@ -1,15 +1,15 @@
 #app-mount {
-  .container-1D34oG {
+  .container-2cd8Mz {
     background: var(--background);
   }
-  .tabBody-3YRQ8W:before {
+  .tabBody-2dgbAs:before {
     content: none;
   }
 
-  .title-30qZAO {
+  .title-338goq {
     margin: 20px;
   }
-  .peopleListItem-2nzedh {
+  .peopleListItem-u6dGxF {
     background: var(--background-alt);
     border-radius: var(--border-radius);
     border: none;
@@ -18,53 +18,53 @@
     padding: 0 15px;
     &:hover {
       background: var(--background-light);
-      .actionButton-uPB8Fs {
+      .actionButton-3-B2x- {
         background: var(--background);
       }
     }
   }
-  .actionButton-uPB8Fs {
+  .actionButton-3-B2x- {
     background: var(--background-dark);
   }
 
 
 
-	.scroller-2ZPeAD {
+	.scroller-hE2gWq {
 		border: none;
 		padding-left: 0;
 	}
-	.container-lRFx4q {
+	.container-1oAagU {
 		background: var(--background);
 	}
-  .nowPlayingColumn-2sl4cE {
+  .nowPlayingColumn-1eCBCN {
     background: transparent;
   }
-  .nowPlayingScroller-2XrVUt {
+  .nowPlayingScroller-12BxFW {
     padding: 20px;
   }
   .header-13Cw0- {
     padding: 0 0 20px 0;
   }
-  .emptyCard-1RJw8n {
+  .emptyCard-KDifrB {
     background: var(--background-alt);
     border-radius: var(--border-radius);
   }
 
-  .wrapper-3D2qGf {
+  .wrapper-2RrXDg {
     background: var(--background-alt);
     border-radius: var(--border-radius);
 		border: none;
     &:hover {
       background: var(--background-light);
-      .inset-3sAvek {
+      .inset-SbsSFp {
         background: var(--background-alt);
       }
     }
   }
-	.section-2gLsgF {
+	.section-3G9aLW {
 		background: var(--background-light);
 	}
-  .inset-3sAvek {
+  .inset-SbsSFp {
     background: var(--background);
   }
 }
