--- a/src/pages/_home.scss
+++ b/src/pages/_home.scss
@@ -1,18 +1,18 @@
 #app-mount {
-  .privateChannels-1nO12o {
+  .privateChannels-oVe7HL {
     background: transparent;
   }
-  .channel-2QD9_O {
+  .channel-1Shao0 {
     margin-left: 0;
     border-radius: 0;
     padding: 0;
     margin-bottom: 3px;
-    .layout-2DM8Md {
+    .layout-1qmrhw {
       border-radius: 0 var(--border-radius) var(--border-radius) 0;
       padding-left: 16px;
     }
 
-    &.selected-aXhQR6 .layout-2DM8Md:before {
+    &.selected-1-Z6gm .layout-1qmrhw:before {
       content: "";
       position: absolute;
       left: 0;
