--- a/src/pages/_nitro.scss
+++ b/src/pages/_nitro.scss
@@ -1,11 +1,11 @@
 #app-mount {
-  .scroller-9moviB {
+  .scroller-29cQFV {
     background: var(--background);
   }
   .detailsBlock-FoDTGA {
     background: var(--background-alt);
   }
-  .feature-2w65J5 {
+  .feature-2IUcBI {
     background: var(--background-alt);
   }
 }
