--- a/src/popouts/_autocomplete.scss
+++ b/src/popouts/_autocomplete.scss
@@ -1,12 +1,12 @@
 #app-mount {
-	.autocomplete-1vrmpx {
+	.autocomplete-3NRXG8 {
 		background: var(--background-light);
 		box-shadow: var(--box-shadow);
-		.categoryHeader-O1zU94 {
+		.categoryHeader-OpJ1Ly {
 			background: var(--background-light);
 		}
 	}
-	.selected-1Tbx07 {
+	.selected-3H3-RC {
 		background: var(--background-alt);
 	}
 }
