--- a/src/popouts/_contextmenu.scss
+++ b/src/popouts/_contextmenu.scss
@@ -1,22 +1,22 @@
-.theme-light .menu-3sdvDG {
+.theme-light .menu-1QACrS {
   background: var(--background-light);
 }
-.theme-dark .menu-3sdvDG {
+.theme-dark .menu-1QACrS {
   background: var(--background-dark);
 }
 
 #app-mount {
-  .menu-3sdvDG {
+  .menu-1QACrS {
     box-shadow: var(--box-shadow);
   }
-  .item-1tOPte {
+  .item-1OdjEX {
     line-height: normal;
-    &:active, &.focused-3afm-j:not(.colorDanger-2qLCe1) {
+    &:active, &.focused-3qFvc8:not(.colorDanger-2qLCe1) {
       background: rgba(var(--accent), 1);
     }
     &.colorPremium-p4p7qO {
       color: rgba(var(--discord-nitro) / 1);
-      &.focused-3afm-j {
+      &.focused-3qFvc8 {
         color: #fff;
         background: rgba(var(--discord-nitro) / 1);
       }
