--- a/src/popouts/_emojipicker.scss
+++ b/src/popouts/_emojipicker.scss
@@ -1,13 +1,13 @@
 #app-mount {
-  .contentWrapper-SvZHNd {
+  .contentWrapper-3vHNP2 {
     background: var(--background-light-alt);
     box-shadow: var(--box-shadow);
     border-radius: var(--border-radius);
   }
-  .scroller-3gAZLs::-webkit-scrollbar {
+  .scroller-2MALzE::-webkit-scrollbar {
     display: none;
   }
-  .container-2XeR5Z {
+  .container-1SX9VC {
     background: var(--background);
     border: 1px solid var(--background);
     transition: border-color .15s ease;
@@ -19,23 +19,23 @@
     }
   }
 
-  .wrapper-2Gsate {
+  .wrapper-22rqw6 {
     background: var(--background);
   }
 
 
-  .list-6NCENv {
-    .listItems-1uJgMC {
+  .list-3V14yy {
+    .listItems-6eZzQ1 {
       left: 0 !important;
     }
     ul[role="row"] {
       padding-left: 8px;
     }
-		.wrapper-1-Fsb8 {
+		.wrapper-1NNaWG {
 			background: var(--background-light-alt);
 			padding-left: 12px;
 		}
-		.inspector-S2gM3e {
+		.inspector-DFKXwB {
 			background: var(--background-light);
 		}
   }
