--- a/src/popouts/_inbox.scss
+++ b/src/popouts/_inbox.scss
@@ -1,12 +1,12 @@
 #app-mount {
-  .container-3iAQ-0 {
+  .container-iA3Qrz {
     margin: 20px 0;
   }
-  .channelHeader-3Gd2xq {
+  .channelHeader-DFRX8q {
     background: var(--background-light-alt);
     padding: 16px;
   }
-  .messageContainer-gbhlwo {
+  .messageContainer-3VTXBC {
     border-radius: 0 0 var(--border-radius) var(--border-radius);
     background: var(--background-alt);
   }
