--- a/src/popouts/_pins.scss
+++ b/src/popouts/_pins.scss
@@ -1,19 +1,19 @@
 #app-mount {
-  .messagesPopoutWrap-1MQ1bW {
+  .messagesPopoutWrap-3zryHW {
     background: var(--background-light);
     box-shadow: var(--box-shadow);
     border-radius: var(--border-radius);
   }
-  .header-ykumBX {
+  .header-1w9Q93 {
     background: var(--background-alt);
     box-shadow: var(--box-shadow);
     z-index: 2;
   }
-  .messageGroupWrapper-o-Zw7G {
+  .messageGroupWrapper-1jf_7C {
     background: var(--background-alt);
     border: none;
   }
-  .messageGroupCozy-2iY6cT {
+  .messageGroupCozy-3v_RqN {
     margin-left: 0;
     margin-right: 0;
   }
