--- a/src/popouts/_search.scss
+++ b/src/popouts/_search.scss
@@ -1,9 +1,9 @@
 #app-mount {
-  .container-3ayLPN {
+  .container-2McqkF {
     background: var(--background-light);
     box-shadow: var(--box-shadow);
   }
-  .option-96V44q {
+  .option-2KkUJO {
     &:after {
       background: linear-gradient(90deg, transparent, var(--background-light));
     }
