--- a/src/popouts/_threads.scss
+++ b/src/popouts/_threads.scss
@@ -1,13 +1,13 @@
 #app-mount {
-	.container-7uh5fX {
+	.container-18GwIk {
 		background: var(--background-light);
 		box-shadow: var(--box-shadow);
 		border-radius: var(--border-radius);
 	}
-	.header-1VS4tm {
+	.header-3_zmOb {
 		background: var(--background-alt);
 	}
-	.container-2I9Hud {
+	.container-2rzKKA {
 		background: var(--background-alt);
 		border-radius: var(--border-radius);
 		border: none;
