--- a/src/settings/guild/_roles.scss
+++ b/src/settings/guild/_roles.scss
@@ -1,12 +1,12 @@
 #app-mount {
-  .sidebar-dLM-kh {
+  .sidebar-3K3Z4C {
     border: none;
   }
-  .titleContainer-2CXtJo {
+  .titleContainer-3fPic2 {
     background: var(--background);
     box-shadow: none;
   }
-  .header-2mZ9Ov {
+  .header-JUTO-g {
     background: var(--background);
     box-shadow: none;
   }
