--- a/src/settings/user/_authapps.scss
+++ b/src/settings/user/_authapps.scss
@@ -1,19 +1,19 @@
 #app-mount [aria-label="USER_SETTINGS"] {
-  .authedApp-mj2Hmd {
+  .authedApp-1tw-eT {
     background: var(--background-alt);
     border-radius: var(--border-radius);
     border: none;
   }
-  .accountBtnInner-sj5jLs {
+  .accountBtnInner-3XK70s {
     background-color: var(--background-light);
   }
-  .connection-1fbD7X {
+  .connection-107AGH {
     background: var(--background-alt);
   }
-  .connectionHeader-2MDqhu {
+  .connectionHeader-2rV1ze {
     background: var(--background-light-alt);
   }
-  .integration-3kMeY4 {
+  .integration-1f5IUi {
     background: var(--background);
   }
 }
