--- a/src/settings/user/_billing.scss
+++ b/src/settings/user/_billing.scss
@@ -1,27 +1,27 @@
 #app-mount [aria-label="USER_SETTINGS"] {
-  .paymentPane-3bwJ6A {
+  .paymentPane-ut5qKZ {
     background: var(--background-alt);
   }
-  .paginator-166-09 {
+  .paginator-1eqD2g {
     background: transparent;
   }
-  .bottomDivider-1K9Gao {
+  .bottomDivider-ZmTm-j {
     border: none;
     &::-webkit-scrollbar {
       display: none;
     }
   }
-  .payment-xT17Mq {
+  .payment-2bOh4k {
     background: transparent;
     &:hover {
       background: var(--background-light-alt);
     }
-    &:not(.hoverablePayment-Yc6mK7) {
+    &:not(.hoverablePayment-lE1s4t) {
       background: var(--background-light);
       padding-bottom: 20px;
     }
   }
-  .expandedInfo-3kfShd {
+  .expandedInfo-1W31i3 {
     background: var(--background-light-alt);
     margin: 0 20px;
   }
