--- a/src/settings/user/_myaccount.scss
+++ b/src/settings/user/_myaccount.scss
@@ -1,9 +1,9 @@
 #app-mount [aria-label="USER_SETTINGS"] {
-  .accountProfileCard-1XCH88 {
+  .accountProfileCard-lbN7n- {
 		background: var(--background-alt);
 	}
-	.background-1QDuV2,
-	.fieldList-21DyL8 {
+	.background-3d_SjE,
+	.fieldList-in8WkP {
 		background: var(--background);
 	}
 }
