--- a/src/settings/user/_voicevideo.scss
+++ b/src/settings/user/_voicevideo.scss
@@ -1,22 +1,22 @@
 #app-mount [aria-label="GUILD_SETTINGS"] {
-  .children-rWhLdy > .flex-1xMQg5.flex-1O1GKY {
+  .children-1xdcWE > .flex-1xMQg5.flex-3BkGQD {
     background: var(--background-alt);
     border-radius: var(--border-radius);
     padding: 16px;
   }
-  .micTest-cP1_6S {
+  .micTest-bjZA-b {
     background: var(--background-alt);
     border-radius: var(--border-radius);
     padding: 16px;
     margin-top: 20px;
-    .marginTop8-1DLZ1n {
+    .marginTop8-24uXGp {
       margin-top: 0;
     }
   }
-  .container-3PXSwK {
+  .container-3NTP7o {
     width: 530px !important;
   }
-  .notches-1sAcEM {
+  .notches-2w7UZJ {
     background: none;
   }
 }
