--- a/src/channels/_header.scss
+++ b/src/channels/_header.scss
@@ -1,8 +1,8 @@
 #app-mount {
-  .selected-31Nl7x .header-2V-4Sw {
+  .selected-1GtAC5 .header-3OsQeK {
     background: transparent;
   }
-  .header-2V-4Sw {
+  .header-3OsQeK {
     box-shadow: none;
     &:hover {
       background: transparent;
