--- a/src/modals/_modal.scss
+++ b/src/modals/_modal.scss
@@ -1,13 +1,13 @@
 #app-mount {
   .modal-3O0aXp,
-  .root-1gCeng {
+  .root-g14mjS {
     background: var(--background);
     box-shadow: var(--box-shadow);
   }
-  .header-1TKi98 {
+  .header-1zd7se {
     box-shadow: none;
   }
-  .footer-2gL1pp {
+  .footer-31IekZ {
     background: var(--background-alt);
     box-shadow: none;
   }
