--- a/src/popouts/_searchresults.scss
+++ b/src/popouts/_searchresults.scss
@@ -1,33 +1,33 @@
 #app-mount {
-  .searchResultsWrap-3-pOjs {
+  .searchResultsWrap-5RVOkx {
     background: var(--background-alt);
     border-top-left-radius: var(--border-radius);
   }
-  .searchHeader-2XoQg7 {
+  .searchHeader-1r_ZSh {
     background: var(--background-light);
     box-shadow: var(--box-shadow-alt);
   }
-  .channelName-1JRO3C {
+  .channelName-3w2Y3c {
     background: var(--background-alt);
   }
 
-  .searchResult-9tQ1uo {
+  .searchResult-O9NDji {
     border: none;
     background: var(--background-light);
   }
   .searchResultMessage-1fxgXh {
-    .cozy-3raOZG {
+    .cozy-VmLDNB {
       margin: 0;
     }
 
-    &:not(.hit-1fVM9e) .cozy-3raOZG:before {
+    &:not(.hit-1fVM9e) .cozy-VmLDNB:before {
       content: none;
     }
     &.hit-1fVM9e {
       box-shadow: 0 0 10px 6px var(--background-alt);
       border: none;
       border-radius: var(--border-radius);
-      .cozy-3raOZG {
+      .cozy-VmLDNB {
         background: var(--background-light);
       }
     }
