--- a/src/settings/_global.scss
+++ b/src/settings/_global.scss
@@ -1,25 +1,25 @@
-#app-mount .layer-3QrUeG[aria-label*="_SETTINGS"] {
+#app-mount .layer-86YKbF[aria-label*="_SETTINGS"] {
   background: var(--background);
 
   // Groups
-  .children-rWhLdy {
-    & > .marginBottom40-2vIwTv:not(.divider-3573oO) {
+  .children-1xdcWE {
+    & > .marginBottom40-fvAlAV:not(.divider-3y7HAB) {
       background: var(--background-alt);
       border-radius: var(--border-radius);
       padding: 16px;
       border: none;
-      .marginTop8-1DLZ1n {
+      .marginTop8-24uXGp {
         margin-top: 0;
       }
     }
-    & > .marginBottom20-32qID7:not(.title-3sZWYQ) {
+    & > .marginBottom20-315RVT:not(.title-3hptVQ) {
       background: var(--background-alt);
       border-radius: var(--border-radius);
       padding: 16px;
       border: none;
     }
     & > [class*="marginBottom"] {
-      .container-2_Tvc_:last-child {
+      .container-1zDvAE:last-child {
         margin-bottom: 0;
       }
       [class*="marginBottom"] {
@@ -32,38 +32,38 @@
       padding: 16px;
       border: none;
     }
-    .children-rWhLdy .flex-1xMQg5.flex-1O1GKY {
+    .children-1xdcWE .flex-2S1XBF.flex-3BkGQD {
       padding: 0 !important;
     }
   }
 
   // Dividers
-  .divider-3573oO {
+  .divider-3y7HAB {
     display: none;
   }
 
   // Notices
-  .formNotice-2_hHWR {
+  .formNotice-2nS8ey {
     padding: 0;
     background: transparent;
   }
-  .card-3Qj_Yx {
+  .card-16VQ8C {
     background: var(--background-light);
     border: none;
   }
 
 
-  .sidebarRegionScroller-3MXcoP {
+  .sidebarRegionScroller-FXiQOh {
     background: var(--background-dark);
   }
 
-  .contentRegionScroller-26nc1e,
-  .contentRegion-3nDuYy {
+  .contentRegionScroller-2_GT_N,
+  .contentRegion-3HkfJJ {
     background: var(--background);
   }
 
 	// Save changes
-	.elevationHigh-1PneE4 {
+	.elevationHigh-28Pty4 {
 		background: var(--background-light) !important;
 		box-shadow: var(--box-shadow);
 	}
