--- a/src/pages/_home.scss
+++ b/src/pages/_home.scss
@@ -4,15 +4,15 @@
   }
   .channel-1Shao0 {
     margin-left: 0;
-    border-radius: 0;
+    border-radius: 0 4px 4px 0;
     padding: 0;
     margin-bottom: 3px;
-    .layout-1qmrhw {
+    .layout-1LjVue {
       border-radius: 0 var(--border-radius) var(--border-radius) 0;
       padding-left: 16px;
     }
 
-    &.selected-1-Z6gm .layout-1qmrhw:before {
+    .selected-3veCBZ::before {
       content: "";
       position: absolute;
       left: 0;
