--- a/src/settings/_global.scss
+++ b/src/settings/_global.scss
@@ -1,4 +1,4 @@
-#app-mount .layer-86YKbF[aria-label*="_SETTINGS"] {
+#app-mount .layer-86YKbF:not(.baseLayer-W6S8cY) {
   background: var(--background);
 
   // Groups
