--- a/src/settings/guild/_roles.scss
+++ b/src/settings/guild/_roles.scss
@@ -2,11 +2,7 @@
   .sidebar-3K3Z4C {
     border: none;
   }
-  .titleContainer-3fPic2 {
-    background: var(--background);
-    box-shadow: none;
-  }
-  .header-JUTO-g {
+  .scroller-3_YDR2 {
     background: var(--background);
     box-shadow: none;
   }
